@@ -405,7 +405,8 @@ widget_t widget_data[] = {
   { widget_text_draw,	  widget_text_finish,	 widget_text_keyhandler     },
   { widget_debugger_draw, NULL,			 widget_debugger_keyhandler },
   { widget_roms_draw,     widget_roms_finish,	 widget_roms_keyhandler     },
-
+  { widget_peripherals_draw, widget_options_finish,
+			                      widget_peripherals_keyhandler },
 };
 
 #ifndef UI_SDL
