@@ -63,6 +63,7 @@ typedef enum widget_type {
   WIDGET_TYPE_TEXT,		/* Text entry widget */
   WIDGET_TYPE_DEBUGGER,		/* Debugger widget */
   WIDGET_TYPE_ROM,		/* ROM selector widget */
+  WIDGET_TYPE_PERIPHERALS,	/* Peripherals options */
 
 } widget_type;
 
